--- a/public/css/app.css
+++ b/public/css/app.css
@@ -838,6 +838,9 @@ select {
   white-space: nowrap;
   border-width: 0;
 }
+.pointer-events-none {
+  pointer-events: none;
+}
 .visible {
   visibility: visible;
 }
@@ -1144,6 +1147,9 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-24 {
+  width: 6rem;
+}
 .w-3 {
   width: 0.75rem;
 }
@@ -1321,6 +1327,9 @@ select {
 }
 .gap-2 {
   gap: 0.5rem;
+}
+.gap-3 {
+  gap: 0.75rem;
 }
 .gap-4 {
   gap: 1rem;
@@ -2525,6 +2534,10 @@ select {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(126 34 206 / var(--tw-ring-opacity));
 }
+.focus\:ring-red-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
+}
 .focus\:ring-opacity-50:focus {
   --tw-ring-opacity: 0.5;
 }
@@ -2691,6 +2704,14 @@ select {
     height: 100vh;
   }
 
+  .sm\:w-24 {
+    width: 6rem;
+  }
+
+  .sm\:w-32 {
+    width: 8rem;
+  }
+
   .sm\:w-auto {
     width: auto;
   }
@@ -2771,6 +2792,11 @@ select {
 
   .sm\:p-6 {
     padding: 1.5rem;
+  }
+
+  .sm\:px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
   }
 
   .sm\:px-6 {
@@ -2865,6 +2891,10 @@ select {
     display: table-cell;
   }
 
+  .md\:table-header-group {
+    display: table-header-group;
+  }
+
   .md\:table-row {
     display: table-row;
   }
@@ -2879,6 +2909,10 @@ select {
 
   .md\:w-2\/4 {
     width: 50%;
+  }
+
+  .md\:w-24 {
+    width: 6rem;
   }
 
   .md\:w-32 {
@@ -2921,6 +2955,10 @@ select {
     align-items: center;
   }
 
+  .md\:justify-center {
+    justify-content: center;
+  }
+
   .md\:justify-between {
     justify-content: space-between;
   }
@@ -2943,6 +2981,10 @@ select {
 
   .md\:border-t-0 {
     border-top-width: 0px;
+  }
+
+  .md\:border-none {
+    border-style: none;
   }
 
   .md\:p-0 {
@@ -3015,6 +3057,10 @@ select {
     width: 5rem;
   }
 
+  .lg\:w-32 {
+    width: 8rem;
+  }
+
   .lg\:w-48 {
     width: 12rem;
   }
@@ -3030,6 +3076,11 @@ select {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
   }
 
   .lg\:px-8 {
